# Agent24

./: .eslintrc.json  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  omlx.sh  package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.renderer.json  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml  cla.yml
apps/desktop/: package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: dev-prepare-backend.mjs
apps/desktop/src/main/: backend-manager.ts
apps/desktop/src/main/ipc/: index.ts
apps/desktop/src/renderer/: App.test.tsx  App.tsx  index.html  main.tsx
apps/desktop/src/renderer/pages/: Approvals.test.tsx  Approvals.tsx  Chat.test.tsx  Chat.tsx  Models.test.tsx  Models.tsx  Runs.test.tsx  Runs.tsx  Schedules.test.tsx  Schedules.tsx  Settings.test.tsx  Settings.tsx  Workbench.test.tsx  Workbench.tsx
apps/desktop/src/renderer/pages/agent/: api.test.ts  api.ts
apps/desktop/src/renderer/pages/schedule/: cronPreview.test.ts  cronPreview.ts
apps/desktop/src/shared/: ipc-types.test.ts  ipc-types.ts
docs/: ADR-016-consume-auraai-packages.md  ADR-026-rust-core-polyglot.md  PLAN.md  RELEASE-CHECKLIST.md  ROADMAP.md  VERIFICATION.md  WORKSTATION_PLAN.md  decision.md  newsletter-plan.md
docs/reference-notes/: codex.md  openfang.md  openworker.md
docs/specs/: LOOP.md  README.md  SPEC-001-engineering.md  SPEC-002-protocol.md  TASKS.md
protocol/: events.schema.json  module.schema.json  openapi.yaml
protocol/fixtures/events/: approval.required.json  approval.resolved.json  model.delta.json  run.cancelled.json  run.completed.json  run.failed.json  run.started.json  run.started.transient.json  schedule.disabled.json  schedule.fired.json  tool.completed.json  tool.started.json
protocol/fixtures/module/: full.json  minimal.json  scoped-id.json
rust/: Cargo.toml  README.md  deny.toml
rust/apps/agent24-cli/: Cargo.toml
rust/apps/agent24-cli/src/: main.rs  service.rs
rust/apps/agent24-cli/src/tui/: app.rs  mod.rs  ui.rs
rust/apps/agent24d/: Cargo.toml
rust/apps/agent24d/src/: approvals.rs  events.rs  main.rs  mcp.rs  overrides.rs  routes.rs  runs.rs  schedules.rs  server.rs
rust/crates/agent24-agent/: Cargo.toml
rust/crates/agent24-agent/src/: lib.rs
rust/crates/agent24-core/: Cargo.toml
rust/crates/agent24-core/src/: lib.rs  transitions.rs  util.rs
rust/crates/agent24-mcp/: Cargo.toml
rust/crates/agent24-mcp/examples/: probe.rs
rust/crates/agent24-mcp/src/: lib.rs
rust/crates/agent24-memory/: Cargo.toml
rust/crates/agent24-memory/migrations/: 0001_kv.sql
rust/crates/agent24-memory/src/: lib.rs  session.rs
rust/crates/agent24-models/: Cargo.toml
rust/crates/agent24-models/src/: lib.rs  router.rs
rust/crates/agent24-policy/: Cargo.toml
rust/crates/agent24-policy/src/: guardian.rs  lib.rs  overrides.rs
rust/crates/agent24-protocol/: Cargo.toml
rust/crates/agent24-protocol/src/: events.rs  lib.rs  state_file.rs  types.rs
rust/crates/agent24-protocol/tests/: fixtures_roundtrip.rs
rust/crates/agent24-scheduler/: Cargo.toml
rust/crates/agent24-scheduler/src/: lib.rs  next_fire.rs
rust/crates/agent24-store/: Cargo.toml
rust/crates/agent24-store/migrations/: 0001_initial.sql  0002_risk_overrides.sql  0003_standing_grants.sql
rust/crates/agent24-store/src/: audit.rs  lib.rs  repo.rs
rust/crates/agent24-store/tests/: store_test.rs
rust/crates/agent24-tools/: Cargo.toml
rust/crates/agent24-tools/src/: lib.rs  local.rs  net.rs
rust/crates/agent24-worker/: Cargo.toml
rust/crates/agent24-worker/src/: lib.rs
scripts/: cli-smoke.sh  tui-verify.sh
src/: test-setup.ts
src/backend/: boxlite-host.ts  boxlite-service.ts  capability-registry.test.ts  capability-registry.ts  llm-gateway.test.ts  llm-gateway.ts  module-installer.ts  server.test.ts  server.ts  types.ts
src/backend/capabilities/: base.ts  example-codebox.ts  example-hello-ui.test.ts  example-hello-ui.ts  example-ping.test.ts  example-ping.ts  example-service-box.ts
src/main/: backend-manager.ts  main.ts  preload.ts
src/main/ipc/: index.ts
src/renderer/: App.tsx  styles.css
src/renderer/pages/: CodeSandbox.tsx  Models.test.tsx  ModulesManager.tsx  ServiceBoxDemo.tsx  Settings.tsx
src/renderer/pages/modules/: HelloModule.test.tsx  HelloModule.tsx
src/shared/: ipc-types.ts
