[workspace]
resolver = "2"
members = [
    "crates/agent24-agent",
    "crates/agent24-core",
    "crates/agent24-memory",
    "crates/agent24-models",
    "crates/agent24-protocol",
    "crates/agent24-scheduler",
    "crates/agent24-policy",
    "crates/agent24-store",
    "crates/agent24-tools",
    "crates/agent24-worker",
    "apps/agent24d",
    "apps/agent24-cli",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/iDoris-ai/Agent24"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# SPEC-001 §5: no unwrap/expect outside tests
unwrap_used = "deny"
expect_used = "deny"
