[package]
name = "agent24-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 CLI — talks the v1 protocol to agent24d (attached via ~/.agent24/daemon.json, or standalone by spawning an ephemeral daemon)"

[[bin]]
name = "agent24"
path = "src/main.rs"

[dependencies]
agent24-protocol = { path = "../../crates/agent24-protocol" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util"] }

[lints]
workspace = true
