[package]
name = "agent24d"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 Rust daemon — v1 protocol server (B2: skeleton — health, auth handshake, graceful shutdown)"

[dependencies]
agent24-agent = { path = "../../crates/agent24-agent" }
agent24-core = { path = "../../crates/agent24-core" }
agent24-models = { path = "../../crates/agent24-models" }
agent24-store = { path = "../../crates/agent24-store" }
agent24-protocol = { path = "../../crates/agent24-protocol" }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
rand = "0.9"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
