[package]
name = "agent24-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 run manager — the agent loop (C2 scope: run lifecycle with first-class cancellation, persistence and events)"

[dependencies]
agent24-core = { path = "../agent24-core" }
agent24-models = { path = "../agent24-models" }
agent24-protocol = { path = "../agent24-protocol" }
agent24-store = { path = "../agent24-store" }
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
