[package]
name = "agent24-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 domain core — pure state machines over the protocol types (zero framework dependencies by design, ADR-026)"

[dependencies]
agent24-protocol = { path = "../agent24-protocol" }
rand = "0.9"
thiserror = "2"

[lints]
workspace = true
