[package]
name = "agent24-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 MCP adapter (M-E/E1): rmcp-backed client, isolated so SDK churn never reaches the kernel"

[dependencies]
agent24-tools = { path = "../agent24-tools" }
agent24-protocol = { path = "../agent24-protocol" }
async-trait = "0.1"
rmcp = { version = "2.2", features = ["client", "transport-child-process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "time", "rt"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
