[package]
name = "agent24-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 memory (M-D/D1): L0 SQLite key-value store + canonical session with threshold LLM-summary compaction"

[dependencies]
agent24-core = { path = "../agent24-core" }
agent24-models = { path = "../agent24-models" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
