[package]
name = "agent24-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 approval system (C4): fail-closed approval broker + broker-backed tool gate"

[dependencies]
agent24-core = { path = "../agent24-core" }
agent24-models = { path = "../agent24-models" }
agent24-protocol = { path = "../agent24-protocol" }
agent24-store = { path = "../agent24-store" }
agent24-tools = { path = "../agent24-tools" }
async-trait = "0.1"
serde_json = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
