[package]
name = "agent24-scheduler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 wall-clock scheduler (C5): cron/every/at triggers with pre-advance, tick loop, failure-disable"

[dependencies]
agent24-core = { path = "../agent24-core" }
agent24-protocol = { path = "../agent24-protocol" }
agent24-store = { path = "../agent24-store" }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
cron = "0.15"
serde_json = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "time", "rt"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
