[package]
name = "agent24-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent24 tool trait + registry + builtin tools (C3 scope: http_fetch, fs_read, fs_write, shell_exec behind a fail-closed approval stub)"

[dependencies]
agent24-protocol = { path = "../agent24-protocol" }
async-trait = "0.1"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "process", "time", "fs", "io-util"] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
